--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,7 +9,8 @@
 
 /*
   The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
+  so we've added these compatibility styles to make sure everything st
+  ill
   looks the same as it did with Tailwind CSS v3.
 
   If we ever want to remove these styles, we need to add an explicit border
@@ -27,58 +28,58 @@
 }
 @layer base {
     :root {
-      --background: 212 63% 100%;
-      --foreground: 212 73% 4%;
-      --muted: 212 15% 94%;
-      --muted-foreground: 212 12% 32%;
-      --popover: 212 63% 100%;
-      --popover-foreground: 212 73% 4%;
-      --card: 212 63% 100%;
-      --card-foreground: 212 73% 4%;
-      --border: 212 13% 95%;
-      --input: 212 13% 95%;
-      --primary: 212 30% 42%;
+      --background: 220 44% 100%;
+      --foreground: 220 67% 0%;
+      --muted: 220 39% 92%;
+      --muted-foreground: 220 13% 27%;
+      --popover: 220 44% 100%;
+      --popover-foreground: 220 67% 0%;
+      --card: 0 0% 99%;
+      --card-foreground: 0 0% 0%;
+      --border: 220 2% 93%;
+      --input: 220 2% 93%;
+      --primary: 220 66% 58%;
       --primary-foreground: 0 0% 100%;
-      --secondary: 212 13% 87%;
-      --secondary-foreground: 212 13% 27%;
-      --accent: 212 13% 87%;
-      --accent-foreground: 212 13% 27%;
-      --destructive: 4 85% 45%;
+      --secondary: 220 7% 91%;
+      --secondary-foreground: 220 7% 31%;
+      --accent: 220 13% 82%;
+      --accent-foreground: 220 13% 22%;
+      --destructive: 0 86% 45%;
       --destructive-foreground: 0 0% 100%;
-      --ring: 212 30% 42%;
-      --chart-1: 212 30% 42%;
-      --chart-2: 212 13% 87%;
-      --chart-3: 212 13% 87%;
-      --chart-4: 212 13% 90%;
-      --chart-5: 212 33% 42%;
+      --ring: 220 66% 58%;
+      --chart-1: 220 66% 58%;
+      --chart-2: 220 7% 91%;
+      --chart-3: 220 13% 82%;
+      --chart-4: 220 7% 94%;
+      --chart-5: 220 69% 58%;
       --radius: 0.5rem;
     }
 
     .dark {
-      --background: 212 47% 3%;
-      --foreground: 212 24% 100%;
-      --muted: 212 15% 6%;
-      --muted-foreground: 212 12% 68%;
-      --popover: 212 47% 3%;
-      --popover-foreground: 212 24% 100%;
-      --card: 212 47% 3%;
-      --card-foreground: 212 24% 100%;
-      --border: 212 13% 13%;
-      --input: 212 13% 13%;
-      --primary: 212 30% 42%;
+      --background: 220 43% 4%;
+      --foreground: 220 16% 99%;
+      --muted: 220 39% 8%;
+      --muted-foreground: 220 13% 73%;
+      --popover: 220 43% 4%;
+      --popover-foreground: 220 16% 99%;
+      --card: 220 43% 5%;
+      --card-foreground: 0 0% 100%;
+      --border: 220 2% 13%;
+      --input: 220 2% 13%;
+      --primary: 220 66% 58%;
       --primary-foreground: 0 0% 100%;
-      --secondary: 212 9% 15%;
-      --secondary-foreground: 212 9% 75%;
-      --accent: 212 9% 15%;
-      --accent-foreground: 212 9% 75%;
-      --destructive: 4 85% 60%;
+      --secondary: 220 7% 9%;
+      --secondary-foreground: 220 7% 69%;
+      --accent: 220 13% 16%;
+      --accent-foreground: 220 13% 76%;
+      --destructive: 0 86% 49%;
       --destructive-foreground: 0 0% 100%;
-      --ring: 212 30% 42%;
-      --chart-1: 212 30% 42%;
-      --chart-2: 212 9% 15%;
-      --chart-3: 212 9% 15%;
-      --chart-4: 212 9% 18%;
-      --chart-5: 212 33% 42%;
+      --ring: 220 66% 58%;
+      --chart-1: 220 66% 58%;
+      --chart-2: 220 7% 9%;
+      --chart-3: 220 13% 16%;
+      --chart-4: 220 7% 12%;
+      --chart-5: 220 69% 58%;
     }
   }
 
